<?xml version="1.0"?>
<package format="3">
  <name>drone_precision_landing_py</name>
  <version>0.0.1</version>
  <description>ROS2 + PX4 EKF-based precision landing package</description>

  <maintainer email="your_email@example.com">YOUR_NAME</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>px4_msgs</depend>
  <depend>cv_bridge</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>